listview design fix

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -448,7 +448,11 @@ button:focus {outline:0 !important;}
 	width: 1000px;
 }
 
-.vlist .box {
+.vlist .hook--showmodal {
+	display: inline-block;
+}
+
+.vlist .box {	
 	height: 270px;
 }
 
@@ -469,13 +473,14 @@ button:focus {outline:0 !important;}
 }
 
 .vlist .list-info .titleD {	
-	font-size: 20px;
+	margin-top: 36px;
+	font-size: 18px;
 	font-weight: bold;
 	color: rgb(101,107,124);
 }
 
 .vlist .list-info .youtube_user_id {
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: bold;
 	color: rgb(101,107,124);
 }
@@ -486,7 +491,7 @@ button:focus {outline:0 !important;}
 }
 
 .vlist .list-info .detailinfos {
-	margin-top: 30px;
+	margin-top: 60px;
 	margin-left: 15px;
 	margin-bottom: 10px;
 }
@@ -617,13 +622,11 @@ button:focus {outline:0 !important;}
 }
 
 #basicModal .footer-content .buttonBox .btnLike {
-	display: inline-block;
-	background: rgb(253,153,126);
+	display: inline-block;	
 	cursor: pointer;
 }
 
 #basicModal .footer-content .buttonBox .btnAdd {
-	display: inline-block;
-	background: rgb(184,184,184); 
+	display: inline-block;	
 	cursor: pointer;
 }
