--- a/app/views/main/_video_list.html.erb
+++ b/app/views/main/_video_list.html.erb
@@ -1,5 +1,5 @@
 <div class="vlist">
-	<a href="https://www.youtube.com/embed/{{youtube_id}}" data-toggle="modal" data-target="#basicModal" class="hook--showmodal">
+	<div data-href="https://www.youtube.com/embed/{{youtube_id}}" data-toggle="modal" data-target="#basicModal" class="hook--showmodal">
 		<div class="dataWrapper"
 			data-title="{{title_korean}}" data-youtube-userid="{{youtube_user_id}}" data-uploaded="{{upload_date}}" data-category="{{category}}"
 			data-views="{{youtube_views}}" data-upvotes="{{upvotes}}" data-downvotes="{{downvotes}}"
@@ -22,7 +22,7 @@
 				</div>		
 			</div>
 		</div>		
-	</a>
+	</div>
 	<div class="list-info">	  
       	<div class="titleD">{{title_korean}}</div>              
       	<div class="row">        	
