--- a/app/views/layouts/main_layout.html.erb
+++ b/app/views/layouts/main_layout.html.erb
@@ -7,14 +7,18 @@
 
   <%= javascript_include_tag 'application_public', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.min.js" %>
-  <%= javascript_include_tag 'main' %>  
+  
+<% if current_page?(:controller => 'main', :action => 'index') %>
+  	<%= javascript_include_tag 'main' %>  
+<% elsif current_page?(:controller => 'main', :action => 'mypage') %>
+	<%= javascript_include_tag 'mypage' %>  
+<% end %>
 
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= yield %>
-
 
 </body>
 </html>
