--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -1,5 +1,6 @@
 <%= form_tag("/videos/filters_test", name: 'filters') do %>
 <div id="left-menu">
+    <input id="menutype" value=0 type="hidden">
 	<input id="page" name="page" value=1 type="hidden">
 	<input id="ipSort" name="sort" value="youtube_views" type="hidden">
     <input id="ipSearchHd" name="search" type="hidden">
