--- a/app/views/main/_video_card.html.erb
+++ b/app/views/main/_video_card.html.erb
@@ -1,5 +1,5 @@
 
-<div data-href="https://www.youtube.com/embed/{{youtube_id}}" data-toggle="modal" data-target="#basicModal" class="hook--showmodal">
+<div data-href="https://www.youtube.com/embed/{{youtube_id}}" data-toggle="modal" data-target="#videoModal" class="hook--showmodal">
 	<div class="dataWrapper"		
 		data-title="{{title_korean}}" data-youtube-userid="{{youtube_user_id}}" data-uploaded="{{upload_date}}" data-category="{{category}}"
 		data-views="{{youtube_views}}" data-upvotes="{{upvotes}}" data-downvotes="{{downvotes}}"
