ing.. login dialog

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,6 +17,8 @@
 
     <%= render 'video_dialog' %>
 
+    <%= render 'login_dialog' %>
+
     <div id="main-content">
       <div class="top_bar">        
 
@@ -37,7 +39,7 @@
               <li role="presentation"><a role="menuitem" value="youtube_views" tabindex="-1" href="#">Profile</a></li>            
             </ul>           -->
           <% else %>                      
-            <a class="login-widget" data-target="#loginModal">Sign in</a>
+            <div class="login-widget" data-toggle="modal" data-target="#loginModal">Sign Test</div>
             <%= link_to "Sign in", new_user_session_path, :class => 'login-widget'  %>
             <%= link_to "Sign up", new_user_registration_path, :class => 'login-widget'  %>             
           <% end %>                         
