--- a/app/views/main/_login_dialog.html.erb
+++ b/app/views/main/_login_dialog.html.erb
@@ -1,14 +1,36 @@
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModal" aria-hidden="true">
-	<div class="modal-dialog">
+  <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body container-fluid">
-          <div class="row">
-            <div class="titleD">Log in</div>
-            <%= image_tag "main/video_player/close.png", :class => "close", :data => {:dismiss=>"modal"} %></div>
-          
 
-        </div>
+
+        <h2>Log in</h2>
+
+        <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+          <div class="field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true %>
+          </div>
+
+          <div class="field">
+            <%= f.label :password %><br />
+            <%= f.password_field :password, autocomplete: "off" %>
+          </div>
+
+          <% if devise_mapping.rememberable? -%>
+            <div class="field">
+              <%= f.check_box :remember_me %>
+              <%= f.label :remember_me %>
+            </div>
+          <% end -%>
+
+          <div class="actions">
+            <%= f.submit "Log in" %>
+          </div>
+        <% end %>
+
+        <%= render "users/shared/links" %>
       </div>
     </div>
+  </div>
 </div>
-
