--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -179,7 +179,8 @@ $(document).on('page:change', function () {
 	});
 
 	//login modal
-	$("form#sign_in_user").bind("ajax:success", function(e, data, status, xhr) {
+	$(document).on("ajax:success", "form#sign_in_user", function(e, data, status, xhr) {
+		console.log(data.success);		
 		if(data.success){
 			alert('login success');
 			$("#loginModal").modal('hide');
@@ -188,6 +189,7 @@ $(document).on('page:change', function () {
 			alert('Login failure!');
 		}
 	});
+	
 
 
 	//cards	
