--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -179,16 +179,15 @@ $(document).on('page:change', function () {
 	});
 
 	//login modal
-	$(document).on("ajax:success", "form#sign_in_user", function(e, data, status, xhr) {
-		console.log(data.success);		
-		if(data.success){
-			alert('login success');
-			$("#loginModal").modal('hide');
-			$("#loginModal .btnLogin").hide();
-		} else {
-			alert('Login failure!');
-		}
-	});
+	// $(document).on("ajax:success", "form#sign_in_user", function(e, data, status, xhr) {		
+	// 	if(data.success){
+	// 		alert('login success');
+	// 		$("#loginModal").modal('hide');
+	// 		$("#loginModal .btnLogin").hide();
+	// 	} else {
+	// 		alert('Login failure!');
+	// 	}
+	// });
 	
 
 
