--- a/app/views/main/_login_dialog.html.erb
+++ b/app/views/main/_login_dialog.html.erb
@@ -6,7 +6,7 @@
 
         <h2>Log in</h2>
 
-        <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+        <%= form_for(resource, as: resource_name, url: session_path(resource_name), :html => {:id => "sign_in_user"}, :remote => :true, :format => :json) do |f| %>
           <div class="field">
             <%= f.label :email %><br />
             <%= f.email_field :email, autofocus: true %>
