--- a/app/views/main/_login_dialog.html.erb
+++ b/app/views/main/_login_dialog.html.erb
@@ -6,30 +6,33 @@
 
         <h2>Log in</h2>
 
-        <%= form_for(resource, as: resource_name, url: session_path(resource_name), :html => {:id => "sign_in_user"}, :remote => :true, :format => :json) do |f| %>
+        <!--
+        <%= form_for(resource, as: resource_name, url: session_path(resource_name), :html => {:id => "sign_in_user"}, :remote => :true, :format => :json) do |f| %> 
+      -->
           <div class="field">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true %>
+            <div class="title">Email</div>            
+            <input id="ipEmail" type="text" class="form-control" autofocus> 
           </div>
 
           <div class="field">
-            <%= f.label :password %><br />
-            <%= f.password_field :password, autocomplete: "off" %>
+            <div class="title">Password</div>            
+            <input id="ipPassword" type="password" class="form-control">            
           </div>
 
           <% if devise_mapping.rememberable? -%>
-            <div class="field">
-              <%= f.check_box :remember_me %>
-              <%= f.label :remember_me %>
+            <div class="field">              
+              <input id="cbRemember" type="checkbox" value="0">
+              <span>Remember me</span>              
             </div>
           <% end -%>
 
           <div class="actions">
-            <%= f.submit "Log in", :class => 'btnLogin' %>
+            <button id="btnLogin">Login</button>            
           </div>
-        <% end %>
 
-        <%= render "users/shared/links" %>
+        <!--
+        <% end %>
+        -->        
       </div>
     </div>
   </div>
