--- a/app/views/main/_login_dialog.html.erb
+++ b/app/views/main/_login_dialog.html.erb
@@ -4,8 +4,8 @@
         <div class="modal-body container-fluid">
 
         <div class="row">
-          <h2>Log in</h2>
-          <%= image_tag "main/video_player/close.png", :class => "close", :data => {:dismiss=>"modal"} %>
+          <div class="dialog-title">Log in</div>
+          <%= image_tag "login/close.png", :class => "close", :data => {:dismiss=>"modal"} %>
         </div>
 
         <!--
@@ -35,7 +35,16 @@
         <!--
         <% end %>
         --> 
-        <%= render "users/shared/links" %>       
+
+        <div class="links">
+          <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+            <%= link_to "Sign up", new_registration_path(resource_name) %>
+          <% end -%>
+          or
+          <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+            <%= link_to "Forgot your password?", new_password_path(resource_name) %>
+          <% end -%>
+        </div>
       </div>
     </div>
   </div>
