--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -230,16 +230,16 @@ $(document).on('page:change', function () {
 	// 	}
 	// });
 
-	$(document).on("ajax:success", "form#sign_up_user", function(e, data, status, xhr) {		
-		console.log(data);
-		if(data.success){
-			alert('signup success');
-			$("#signupModal").modal('hide');
-			$("#signupModal .btnSignup").hide();
-		} else {
-			alert('signup failure!');
-		}
-	});
+	// $(document).on("ajax:success", "form#sign_up_user", function(e, data, status, xhr) {		
+	// 	console.log(data);
+	// 	if(data.success){
+	// 		alert('signup success');
+	// 		$("#signupModal").modal('hide');
+	// 		$("#signupModal .btnSignup").hide();
+	// 	} else {
+	// 		alert('signup failure!');
+	// 	}
+	// });
 	
 
 
