--- a/app/views/main/_login_dialog.html.erb
+++ b/app/views/main/_login_dialog.html.erb
@@ -8,9 +8,29 @@
           <%= image_tag "login/close.png", :class => "close", :data => {:dismiss=>"modal"} %>
         </div>
 
-        <!--
-        <%= form_for(resource, as: resource_name, url: session_path(resource_name), :html => {:id => "sign_in_user"}, :remote => :true, :format => :json) do |f| %> 
-      -->
+      
+        <%= form_for(resource, as: resource_name, url: session_path(resource_name), :html => {:id => "sign_in_user"}) do |f| %> 
+          <div class="field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true %>
+          </div>
+
+          <div class="field">
+            <%= f.label :password %><br />
+            <%= f.password_field :password, autocomplete: "off" %>
+          </div>
+
+          <% if devise_mapping.rememberable? -%>
+            <div class="field">
+              <%= f.check_box :remember_me %>
+              <%= f.label :remember_me %>
+            </div>
+          <% end -%>
+
+          <div class="actions">
+            <%= f.submit "Log in" %>
+          </div>
+      <!--
           <div class="field">
             <div class="title">Email</div>            
             <input id="ipEmail" type="text" class="form-control" autofocus> 
@@ -31,10 +51,9 @@
           <div class="actions">
             <button id="btnLogin">Login</button>            
           </div>
-
-        <!--
+      -->
+        
         <% end %>
-        --> 
 
         <div class="links">
           <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
