--- a/app/views/main/_login_dialog.html.erb
+++ b/app/views/main/_login_dialog.html.erb
@@ -49,7 +49,7 @@
         <% end -%>
 
         <div class="actions">
-          <button id="btnLogin">Login</button>            
+          <div id="btnLogin"><%=image_tag "login/btnlogin.png" %></div>            
         </div>                      
 
         <div class="links">
