--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -13,12 +13,12 @@ function login_ajax(email, password, remember_me) {
 		});
 
 	  request.success(function(){		    
-	    alert("success");
+	    	location.href="/";
 	  });
 
 	  request.error(function(httpObj, textStatus) {
 	  	if(httpObj.status!=200){	  	
-	  		alert("false:"+httpObj.status);
+	  		alert("Email or password is incorrect. :"+httpObj.status);
 	  	}
 	  });		  	
 }
