--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -4,7 +4,7 @@ function signup_ajax(email, password) {
 		type: 'POST',
 		beforeSend: function(xhr) {xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))},	  		  	
 		data: {
-			"user":{
+			"user":{				
 				"email": email,
 				"password": password,
 				"password_confirmation": password
@@ -13,7 +13,7 @@ function signup_ajax(email, password) {
 	});
 
 	request.success(function(){		    
-		alert("success");
+		alert("Sign Up Successful");
 	});
 
 	request.error(function(httpObj, textStatus) {
@@ -237,17 +237,42 @@ $(document).on('page:change', function () {
 	});
 
 	$("#btnLogin").click(function() {		
-		if($("#ipEmail").val().length>0 && $("#ipPassword").val().length>0){
+		if($("#loginModal #ipEmail").val().length>0 && $("#loginModal #ipPassword").val().length>0){
 			var remember = 0;
-			if($("#cbRemember").is(":checked")==true){
+			if($("#loginModal #cbRemember").is(":checked")==true){
 				remember = 1;
 			}
-			login_ajax($("#ipEmail").val(), $("#ipPassword").val(), remember);			
+			login_ajax($("#loginModal #ipEmail").val(), $("#loginModal #ipPassword").val(), remember);			
+		} else {
+			alert("Please fill in all fields.");
 		}
 	});
 
-	$("#btnSignup").click(function() {
-		
+	$("#btnSignup").click(function() {				
+		var email = $("#signupModal #ipEmail").val();
+		var password = $("#signupModal #ipPassword").val();
+		var password_confirm = $("#signupModal #ipPasswordConfirm").val();
+		console.log(email+"/"+password+"/"+password_confirm);
+		if(email.length==0 || password.length==0 || password_confirm.length==0){
+			alert("Please fill in all fields.");
+			return;
+		}
+
+		var regex = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+		if(!regex.test(email)){
+			alert("Email address is incorrect.");
+			return;
+		}
+		if(password.length<8){
+			alert("Password must have 8 characters minimum.");;
+			return;
+		}
+		if(password!==password_confirm){
+			alert("Password and Password Confirmation are different.");
+			return;
+		}
+
+		signup_ajax(email, password);
 	});
 
 	// $(document).on("ajax:success", "form#sign_up_user", function(e, data, status, xhr) {		
