--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -33,8 +33,9 @@
 
           <div class="dropdownP col-md-2">   
           <% if user_signed_in? %>                   
+            <%= current_user %>
             <%= image_tag("main/profile_none.png", :class => "imgProfile") %>
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'login-widget'  %>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'login-widget'  %>            
             <!-- <button class="btnProfile btn dropdown-toggle" type="button" id="btnSort" data-toggle="dropdown" aria-expanded="true"><span class="selection">Profile</span> <span class="caret"></span></button>
             <ul id="ddProfile" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">          
               <li role="presentation"><a role="menuitem" value="youtube_views" tabindex="-1" href="#">Profile</a></li>            
