--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,72 +9,89 @@
 
 button:focus {outline:0 !important;}
 
+/* modals */
 .dialog-title {
-	font-size: 36px;
+	padding-top: 5px;
+	font-size: 20px;
 	font-weight: bold;
 	color: rgb(101, 107, 124);
 	display: inline-block;
-	margin-left: 30px;
+	margin-left: 20px;
 }
 
-#loginModal .modal-dialog {
-	width: 584px;
-}
-
-#loginModal .row {
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-#loginModal .close {
+.close {
+	width: 28px;
+	height: 28px;
 	margin-top: 5px;
-	margin-right: 30px;
+	margin-right: 15px;
 }
 
-#loginModal .field {
-	padding-left: 10px;
-	padding-top: 10px;
-}
-
-#loginModal input.form-control {
-	width: 524px;
-	height: 40px;
-	font-size: 20px;
-	color: rgb(101,107,124);	
-}
-
-#loginModal .spRemember {
-	font-size: 16px;
-	color: rgb(163,167,179);
-	margin-left: 10px;
-}
-
-#loginModal #btnLogin {
-	cursor: pointer;
-	margin-top: 10px;
-	margin-left: 10px;
-}
-
-#loginModal .links {
-	color: rgb(163,167,179);
-	margin-top: 20px;
-	margin-bottom: 15px;
-	margin-left: 15px;
-}
-
-#loginModal .links a{
+.links a{
 	font-size: 18px;
 	color: rgb(101,107,124);	
 }
 
-#loginModal .links a:hover {
+.links a:hover {
 	background: #fff;
 }
 
-#signupModal .close {
-	margin-right: 10px;
+input.form-control {
+	width: 364px;
+	height: 40px;
+	font-size: 16px;
+	color: rgb(101,107,124);	
 }
 
+#loginModal .modal-dialog {
+	width: 395px;
+}
+
+#loginModal .row {	
+	margin-bottom: 20px;
+}
+
+#loginModal .spRemember {
+	font-size: 14px;
+	color: rgb(163,167,179);
+	margin-left: 5px;
+}
+
+#loginModal #btnLogin {
+	cursor: pointer;	
+	width: 364px;
+	margin-top: 10px;	
+}
+
+#loginModal #btnLogin img {
+	width: 100%;
+}
+
+#loginModal .links {
+	color: rgb(163,167,179);
+	margin-top: 15px;
+	margin-bottom: 10px;	
+	margin-left: 1px;
+}
+
+#signupModal .modal-dialog {
+	width: 395px;
+}
+
+#signupModal .row {
+	margin-bottom: 20px;
+}
+
+#signupModal #btnSignup {
+	cursor: pointer;	
+	width: 364px;
+	margin-top: 10px;	
+}
+
+#signupModal #btnSignup img {
+	width: 100%;
+}
+
+/* main */
 #main-container {
 	font-family: 'montserratregular';
 	background: rgb(48,64,79);	
