--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -200,7 +200,6 @@ $(document).on('page:change', function () {
 			$("#ipVType").val($(this).attr("value"));
 			form.trigger("changeT");
 		});
-
 	}
 
 
@@ -210,6 +209,7 @@ $(document).on('page:change', function () {
 		$(".btn-group .btnView1").attr({ src: "<%= asset_path('main/view_2_p.png') %>"});
 
 		mode = "cardview";
+		$("#page").val(1);
 		main_ajax_filters(mode);
 	});
 
@@ -218,6 +218,7 @@ $(document).on('page:change', function () {
 		$(".btn-group .btnView2").attr({ src: "<%= asset_path('main/view_3_p.png') %>"});
 
 		mode = "cardview2";
+		$("#page").val(1);
 		main_ajax_filters(mode);
 	});
 
@@ -226,6 +227,7 @@ $(document).on('page:change', function () {
 		$(".btn-group .btnView3").attr({ src: "<%= asset_path('main/view_list_p.png') %>"});
 
 		mode = "listview";
+		$("#page").val(1);
 		main_ajax_filters(mode);
 	});
 
@@ -273,19 +275,7 @@ $(document).on('page:change', function () {
 		}
 
 		signup_ajax(email, password);
-	});
-
-	// $(document).on("ajax:success", "form#sign_up_user", function(e, data, status, xhr) {		
-	// 	console.log(data);
-	// 	if(data.success){
-	// 		alert('signup success');
-	// 		$("#signupModal").modal('hide');
-	// 		$("#signupModal .btnSignup").hide();
-	// 	} else {
-	// 		alert('signup failure!');
-	// 	}
-	// });
-	
+	});	
 
 
 	//cards	
@@ -333,6 +323,13 @@ $(document).on('page:change', function () {
 
   	$("#videoModal").on('hidden.bs.modal', function () {
     	$(".main-video .iframe").attr('src', '');    	
+  	});
+
+  	$("#videoModal").on('click', '.btnLike', function(e) {
+  		e.stopPropagation();
+
+  		var objData = {id: $(this).attr("data-video-id")};
+		processLike(objData);
   	});
 
   	// Filters and sorting
