--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -26,6 +26,13 @@ button:focus {outline:0 !important;}
 	margin-right: 15px;
 }
 
+.links div{
+	display: inline-block;
+	font-size: 18px;
+	color: rgb(101,107,124);	
+	cursor: pointer;
+}
+
 .links a{
 	font-size: 18px;
 	color: rgb(101,107,124);	
