--- a/app/views/main/_login_dialog.html.erb
+++ b/app/views/main/_login_dialog.html.erb
@@ -27,10 +27,8 @@
           <div id="btnLogin"><%=image_tag "login/btnlogin.png" %></div>            
         </div>                      
 
-        <div class="links">
-          <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-            <%= link_to "Sign up", new_registration_path(resource_name) %>
-          <% end -%>
+        <div class="links">          
+          <div id="link_signup">Sign up</div>
           or
           <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
             <%= link_to "Forgot your password?", new_password_path(resource_name) %>
