--- a/app/views/main/_video_list.html.erb
+++ b/app/views/main/_video_list.html.erb
@@ -1,5 +1,5 @@
 <div class="vlist">
-	<div data-href="https://www.youtube.com/embed/{{youtube_id}}" data-toggle="modal" data-target="#basicModal" class="hook--showmodal">
+	<div data-href="https://www.youtube.com/embed/{{youtube_id}}" data-toggle="modal" data-target="#videoModal" class="hook--showmodal">
 		<div class="dataWrapper"
 			data-title="{{title_korean}}" data-youtube-userid="{{youtube_user_id}}" data-uploaded="{{upload_date}}" data-category="{{category}}"
 			data-views="{{youtube_views}}" data-upvotes="{{upvotes}}" data-downvotes="{{downvotes}}"
@@ -37,4 +37,6 @@
         	<div class="cheesiness col-md-5">Cheesy Score <span class="boxwrapper">{{cheesiness}}</span></div>
         </div>
     </div>      
+
+    <hr class="line"></hr>
 </div>
