--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -46,6 +46,8 @@
           </div>           
       </div>
 
+      <hr class="line"></hr>
+
       <div class="header_panel row">
         <div class="numResults col-md-5"></div>                
         <div class="dropdown col-md-2">                
