--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -318,6 +318,10 @@ input.form-control {
 	padding-left: 40px;
 }
 
+.line {
+	border-width: 2px;
+}
+
 .top_bar {	
 	height: 60px;					
 }
@@ -367,7 +371,7 @@ input.form-control {
 .top_bar .dropdownP {
 	position: absolute;
 	top: 25px;
-	right: 210px;	
+	right: 225px;	
 }
 
 .top_bar .dropdownP .imgProfile {
@@ -576,7 +580,7 @@ input.form-control {
   	margin-left: 30px;
   	width: 500px;
 
-  	font-size: 16px;
+  	font-size: 15px;
   	color: rgb(163,167,179);
 }
 
@@ -594,7 +598,8 @@ input.form-control {
 }
 
 .vlist .list-info .category {
-	font-size: 16px;
+	font-size: 15px;
+	font-weight: normal;
 	color: rgb(101,107,124);
 }
 
