--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -112,6 +112,67 @@ function main_ajax_filters(mode) {
   	});
 }
 
+function mypage_ajax_likes(mode) {
+	var source = $("#video_card_template").html();  
+	
+	if(mode==="listview"){
+		source = $("#video_list_template").html();
+	}  
+
+  	var templatingFunction = Handlebars.compile(source);
+  	var context = {};  
+
+  	var form = $("form[name=filters]");
+
+  	$.ajax({
+    	url: '/main/mylikes',
+    	type: 'GET',
+    	data: form.serialize()
+  	}).done(function (response) {
+    	context.videos = response.videos;
+
+    	$(".header_panel .numResults").html($.number(response.count) + " likes");    	
+
+    	if (form.find("#page").val() == "1") {    
+      		$(".thumbnails").empty();      	  
+      		$("#sidebar").css("height", 3650);    			   		      		
+    	}
+    	
+    	var cards = $("#cards");
+
+    	if(mode==="cardview" || mode==="cardview2"){
+    		cards.imagesLoaded(function() {
+				cards.masonry({
+					itemSelector: '.box',
+					isFitWidth: true			
+				});		
+			});
+    	} else {
+    		cards.imagesLoaded(function() {
+				cards.masonry({
+					itemSelector: '.vlist',
+					isFitWidth: true
+				});
+			});			
+    	}	
+
+    	var newThumbs = templatingFunction(context);
+    	$(".thumbnails").append(newThumbs);        	
+
+    	// $(".btn-group .btnView1").click();
+    	if(mode==="cardview"){
+    		$(".cards .box").width("350px");    		
+			$("#cards").masonry('reload');	
+    	} else if(mode==="cardview2"){
+    		$(".cards .box").width("210px");    		
+    		$("#cards").masonry('reload');	
+    	} else {
+    		$("#cards").masonry('reload');	
+    		$(".numvalue").number(true);			
+    	}    	
+  	});
+}
+
 function viewMenuBtnInit() {
 	$(".btn-group .btnView1").attr({ src: "<%= asset_path('main/view_2_n.png') %>"});
 	$(".btn-group .btnView2").attr({ src: "<%= asset_path('main/view_3_n.png') %>"});
